<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--RxAndroid的文字-->

    <string name="test_button_simple">简单使用</string>
    <string name="test_button_more">更多使用</string>
    <string name="test_button_lambda">Lambda使用</string>
    <string name="test_button_network">网络使用</string>
    <string name="test_button_safe">线程安全</string>
    <string name="test_button_binding">RxBinding</string>

    <string name="usual_approach">常规方式</string>
    <string name="reactive_approach">响应方式</string>

    <string name="menu_add">添加</string>
    <string name="menu_delete">删除</string>
</resources>
