<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="event"
            type="android.view.View.OnClickListener"/>
    </data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/simple"
        android:gravity="center"
        android:onClick="@{event}"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/test_button_simple"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/more"
        android:gravity="center"
        android:onClick="@{event}"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/test_button_more"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/lambda"
        android:gravity="center"
        android:onClick="@{event}"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/test_button_lambda"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/safe"
        android:gravity="center"
        android:onClick="@{event}"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/test_button_safe"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/RXBinding"
        android:gravity="center"
        android:onClick="@{event}"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/test_button_binding"
        android:layout_height="wrap_content" />

</LinearLayout></layout>